# Qt_ModelView

./: CMakeLists.txt  ContactModel.cpp  ContactModel.h  Main.qml  ToDoList.qml  main.cpp
entities/: ToDoList.cpp  ToDoList.h
models/: ToDoModel.cpp  ToDoModel.h
